[gd_scene load_steps=20 format=3 uid="uid://bv6dr8u5h0gnw"]

[ext_resource type="Script" path="res://Scripts/hub.gd" id="1_hugjr"]
[ext_resource type="Texture2D" uid="uid://i6p7gwnbpebc" path="res://Assets/Packs/png/paper_panel_601_x_478.png" id="2_dfd3l"]
[ext_resource type="Texture2D" uid="uid://dwrle8ha70aol" path="res://Assets/Packs/png/paper_panel_242_x_240.png" id="2_w0rdn"]
[ext_resource type="Animation" uid="uid://dlnwwnssdrqsw" path="res://Assets/Animations/Menu/button_shake.res" id="3_t4c8j"]
[ext_resource type="Texture2D" uid="uid://6co2ltecamvw" path="res://Assets/random_photos/vecteezy_room-inside-interior-cartoon-living-room-house-with_11803091_840/vecteezy_room-inside-interior-cartoon-living-room-house-with_11803091.jpg" id="3_ybcd3"]
[ext_resource type="Script" path="res://Scripts/animation_player.gd" id="5_y18oi"]
[ext_resource type="FontFile" uid="uid://c4c4re1prp0j5" path="res://Assets/Fonts/Summer Break.otf" id="6_f3nq5"]
[ext_resource type="AudioStream" uid="uid://de3vj81oxvohb" path="res://Audio/Door Open and Close Sound Effects.mp3" id="8_637bq"]

[sub_resource type="Animation" id="Animation_3ehde"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../UI:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../UI:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../UI/PaperPanel242X240:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../UI/Shop:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../UI/VBoxContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../UI/MenuButtons:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../UI/Panel:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_e0w7r"]
resource_name = "popup"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../UI:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../UI:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../UI/PaperPanel242X240:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../UI/Shop:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../UI/VBoxContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../UI/MenuButtons:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../UI/Panel:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dgefs"]
_data = {
"RESET": SubResource("Animation_3ehde"),
"popup": SubResource("Animation_e0w7r")
}

[sub_resource type="Theme" id="Theme_aohvx"]

[sub_resource type="FontFile" id="FontFile_3ep6k"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/100/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/60/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0
cache/0/75/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_1fjkk"]
font = ExtResource("6_f3nq5")
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_gubic"]
font = ExtResource("6_f3nq5")
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_3ukkl"]
font = ExtResource("6_f3nq5")
font_size = 75

[sub_resource type="Animation" id="Animation_sniya"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(259, 43)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../VBoxContainer/Current:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0mppl"]
resource_name = "move_scene"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../StartButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(2.82843, 17.7531),
"update": 0,
"values": [Color(0.106418, 0.773087, 0.552679, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aigfl"]
_data = {
"RESET": SubResource("Animation_sniya"),
"button_shake": ExtResource("3_t4c8j"),
"move_scene": SubResource("Animation_0mppl")
}

[node name="Hub" type="Node2D"]
script = ExtResource("1_hugjr")
INITIAL_BALANCE = 0
casino_time = 45

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2(1e-05, 1e-05)

[node name="House background" type="Sprite2D" parent="Node2D"]
position = Vector2(6.49496e+07, 3.245e+07)
scale = Vector2(67656.7, 63940.9)
texture = ExtResource("3_ybcd3")
flip_h = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="UI"]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 694.0

[node name="PaperPanel242X240" type="Sprite2D" parent="UI"]
visible = false
position = Vector2(592.879, 329.5)
scale = Vector2(2.5, 1.485)
texture = ExtResource("2_dfd3l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
root_node = NodePath("../../Node2D")
libraries = {
"": SubResource("AnimationLibrary_dgefs")
}
script = ExtResource("5_y18oi")

[node name="Shop" type="HBoxContainer" parent="UI"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UI/Shop"]
layout_mode = 2

[node name="Button2" type="Button" parent="UI/Shop"]
layout_mode = 2
theme = SubResource("Theme_aohvx")
theme_override_colors/font_color = Color(0.784314, 0.603922, 0.717647, 1)
theme_override_fonts/font = SubResource("FontFile_3ep6k")
theme_override_font_sizes/font_size = 30
text = "Companion 1"
icon = ExtResource("2_w0rdn")
icon_alignment = 1

[node name="Button3" type="Button" parent="UI/Shop"]
layout_mode = 2
theme = SubResource("Theme_aohvx")
theme_override_colors/font_color = Color(0.784314, 0.603922, 0.717647, 1)
theme_override_fonts/font = SubResource("FontFile_3ep6k")
theme_override_font_sizes/font_size = 50
text = "SHOP"
icon = ExtResource("2_w0rdn")
icon_alignment = 1

[node name="Button4" type="Button" parent="UI/Shop"]
layout_mode = 2
theme = SubResource("Theme_aohvx")
theme_override_colors/font_color = Color(0.784314, 0.603922, 0.717647, 1)
theme_override_fonts/font = SubResource("FontFile_3ep6k")
theme_override_font_sizes/font_size = 50
text = "SHOP"
icon = ExtResource("2_w0rdn")
icon_alignment = 1

[node name="Button5" type="Button" parent="UI/Shop"]
layout_mode = 2
theme = SubResource("Theme_aohvx")
theme_override_colors/font_color = Color(0.784314, 0.603922, 0.717647, 1)
theme_override_fonts/font = SubResource("FontFile_3ep6k")
theme_override_font_sizes/font_size = 50
text = "SHOP"
icon = ExtResource("2_w0rdn")
icon_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
visible = false
layout_mode = 0
offset_top = 27.0
offset_right = 1150.0
offset_bottom = 648.0
theme_override_constants/separation = 20

[node name="Day" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Day 1
"
label_settings = SubResource("LabelSettings_1fjkk")
horizontal_alignment = 1

[node name="BillAmount" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "You Owe: $1000"
label_settings = SubResource("LabelSettings_1fjkk")
horizontal_alignment = 1

[node name="Current" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.999877, 0.388095, 0.319868, 1)
text = "Current: $2
"
label_settings = SubResource("LabelSettings_gubic")
horizontal_alignment = 1

[node name="Return" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "
"
label_settings = SubResource("LabelSettings_3ukkl")
horizontal_alignment = 1

[node name="MenuButtons" type="Panel" parent="UI"]
visible = false
layout_mode = 0
offset_left = 222.0
offset_top = 400.0
offset_right = 923.0
offset_bottom = 608.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/MenuButtons"]
root_node = NodePath("../PayBills")
libraries = {
"": SubResource("AnimationLibrary_aigfl")
}

[node name="StartButton" type="Button" parent="UI/MenuButtons"]
layout_mode = 0
offset_left = 55.0
offset_top = 123.0
offset_right = 436.0
offset_bottom = 188.0
theme_override_font_sizes/font_size = 40
text = "Go to Casino (Start)"

[node name="PayBills" type="Button" parent="UI/MenuButtons"]
layout_mode = 0
offset_left = 259.0
offset_top = 43.0
offset_right = 435.0
offset_bottom = 106.0
theme_override_font_sizes/font_size = 40
text = "Pay Now"

[node name="Exit" type="Button" parent="UI/MenuButtons"]
layout_mode = 0
offset_left = 456.0
offset_top = 123.0
offset_right = 632.0
offset_bottom = 186.0
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="ToShop" type="Button" parent="UI/MenuButtons"]
layout_mode = 0
offset_left = 457.0
offset_top = 42.0
offset_right = 631.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 40
text = "Shop"

[node name="Audio" type="Node2D" parent="."]

[node name="pay_button" type="AudioStreamPlayer2D" parent="Audio"]

[node name="leave_home" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("8_637bq")

[connection signal="pressed" from="UI/MenuButtons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/MenuButtons/PayBills" to="." method="_on_pay_bills_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="UI/MenuButtons/ToShop" to="." method="_on_to_shop_pressed"]
